--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "jspdf": "^3.0.1",
+    "puppeteer": "^24.10.0"
   }
 }
