--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.19.0",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "@vitejs/plugin-react": "^4.5.1",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "career-connect": "file:..",
@@ -21,6 +22,7 @@
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.18.2",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.441.0",
     "moment": "^2.30.1",
     "pako": "^2.1.0",
@@ -28,12 +30,13 @@
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-share-social": "^0.1.60",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^11.0.5",
     "react-typewriter-effect": "^1.1.0",
     "recharts": "^2.13.3",
     "redux-persist": "^6.0.0"
