--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.441.0",
     "moment": "^2.30.1",
     "pako": "^2.1.0",
