--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "mongoose": "^8.6.2",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
     "puppeteer": "^24.11.1"
